backend/test_unity_skills_results_v2.txt
============================= test session starts =============================
platform win32 -- Python 3.13.5, pytest-9.0.1, pluggy-1.6.0 -- C:\Python313\python.exe
cachedir: .pytest_cache
rootdir: C:\Projects\Unity-Generator\backend
configfile: pytest.ini
plugins: anyio-4.12.1
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
_________________ ERROR collecting tests/test_unity_skills.py _________________
C:\Users\andreumv\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\andreumv\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\andreumv\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_unity_skills.py:11: in <module>
    from agents.unity_skills import UnityCodeSkill, UnityProjectSkill
..\agents\__init__.py:5: in <module>
    from .unity_skills import UnityCodeSkill, UnityProjectSkill
E     File "C:\Projects\Unity-Generator\agents\unity_skills.py", line 194
E       try:
E       ^^^
E   IndentationError: expected an indented block after 'try' statement on line 192
=========================== short test summary info ===========================
ERROR tests/test_unity_skills.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.16s ===============================
